--- a/css/main.css
+++ b/css/main.css
@@ -223,19 +223,19 @@ footer div a img:hover {
   filter: invert(100%);
 }
 
-#precioFinal{
+#precioFinal {
   font-size: 3rem;
   color: aliceblue;
   text-align: center;
-  font-family: 'DynaPuff';
+  font-family: "DynaPuff";
 }
 
-#finCompra{
-  background-color:rgb(252, 178, 66);
+#finCompra {
+  background-color: rgb(252, 178, 66);
   width: 50rem;
   height: 50rem;
 }
-#txtFinCompra{
+#txtFinCompra {
   color: aliceblue;
   font-size: 4rem;
   font-family: DynaPuff, sans-serif;
